[gd_scene load_steps=5 format=3 uid="uid://4oty1dgvujvp"]

[ext_resource type="Script" path="res://scenes/game/asteroid_spawner.gd" id="1_8lac2"]
[ext_resource type="PackedScene" uid="uid://dtka2niwhrsik" path="res://scenes/Obstacles/asteroid.tscn" id="2_hb58p"]

[sub_resource type="Curve2D" id="Curve2D_vc50w"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -57, 97, 0, 0, 0, 0, -57, -47)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_5jp62"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 57, -47, 0, 0, 0, 0, 57, 97)
}
point_count = 2

[node name="AsteroidSpawner" type="Node2D"]
script = ExtResource("1_8lac2")
asteroid_scene = ExtResource("2_hb58p")

[node name="Path1" type="Path2D" parent="."]
curve = SubResource("Curve2D_vc50w")

[node name="Follow" type="PathFollow2D" parent="Path1"]
position = Vector2(-57, 97)
rotation = -1.5708

[node name="Path2" type="Path2D" parent="."]
curve = SubResource("Curve2D_5jp62")

[node name="Follow" type="PathFollow2D" parent="Path2"]
position = Vector2(57, -47)
rotation = 1.5708

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
